--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,3 +1,17 @@
-$back: rgb(41, 41, 9);
-$text: rgb(212, 166, 166);
-$space: 20px;
+$bg: #f2edf5;
+$black:  #000;
+$purple: #8f7eaf;
+$yellow:#ffff00;
+$grey: #bebebe;
+$white: #fff;
+
+$space-xxs: 8px;
+$space-xs:16px;
+$space-s: 24px;
+$space-m: 40px;
+$space-l: 90px;
+$space-xl: 110px;
+
+$box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
+
+$font-family: "Montserrat", sans-serif;
