--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,6 +1,7 @@
 $bg: #f2edf5;
 $black:  #000;
 $purple: #8f7eaf;
+$bright-purple: #7d2bdb;
 $yellow:#ffff00;
 $grey: #bebebe;
 $white: #fff;
@@ -15,3 +16,4 @@ $space-xl: 110px;
 $box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
 
 $font-family: "Montserrat", sans-serif;
+ 
