--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -7,7 +7,7 @@
   @mixin flex-column{
     display: flex;
     flex-direction: column;
-    gap: $space-s;
+    justify-content: space-between;
   }
 
   @mixin btn {
@@ -20,7 +20,53 @@
     border-radius: $space-s;
 
     &:hover{
-        background-color: #7d2bdb;
+        background-color: $bright-purple;
         box-shadow: $box-shadow;
     }
   }
+
+   @mixin sidebar-container{
+    display: flex;
+    flex-direction: column;
+    gap: $space-xxs;
+    text-transform: capitalize;
+    text-wrap: nowrap;
+  }
+
+  @mixin title-1{
+    font-family: $font-family;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 24px;
+  }
+
+  @mixin title-2{
+    font-family: $font-family;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px; 
+  }
+
+  @mixin title-3{
+    font-family: $font-family;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+
+  @mixin link-text{
+   font-family: $font-family;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-transform: capitalize; 
+  }
+
+  @mixin text {
+    font-family: $font-family;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  
